--- a/TT-2016-B045/archivosTex/analisis.tex
+++ b/TT-2016-B045/archivosTex/analisis.tex
@@ -8,17 +8,17 @@ El capítulo de análisis dentro de este documento, contiene todo el proceso que
 
 \section{Estudio de Factibilidad}
 
-Como se expuso anteriormente, el protocolo criptográfico nos arroja excelentes beneficios en cuanto a la optimización de espacio de memoria en la nube y garantiza la seguridad e integridad de los datos de usuarios registrados en la nube. Hasta ahora se tiene muy claro cuál será el impacto de la implementación de este protocolo, pero aún queda por establecer cuán viable es la realización de este protocolo en cuanto a facilidades técnicas y operativas.
+Como se expuso anteriormente, el protocolo criptográfico que se presenta en este trabajo terminal da como resultados grandes e importantes beneficios en cuanto a la optimización de espacio de memoria en la nube y garantiza la seguridad e integridad de los datos de usuarios registrados en la nube. Hasta ahora se tiene muy claro que este trabajo terminal, evitará la duplicación de archivos en la nube garantizando la integridad y confidencialidad tanto de los archivos almacenados como de los usuarios de la nube, pero aún queda por establecer cuán viable es la realización de este protocolo en cuanto a facilidades técnicas y operativas.
 
 
 \subsection{Factibilidad técnica}
 
-Para la implementación del protocolo criptográfico, se cuentan con las herramientas de software necesarias ya que estas existen y están disponibles para su uso y disponibilidad inmediata al desarrollo del protocolo. Cabe mencionar que las herramientas que involucran todo el desarrollo del protocolo, se encuentran completas en tanto a funcionalidades, soportes, documentación, seguridad, etc. 
+Para el desarrollo de este trabajo terminal, se cuenta con el software necesario para la implementación del protocolo criptográfico propuesto,  ya que este existe y esta disponible para su uso y disponibilidad inmediata al desarrollo del protocolo. Cabe mencionar que las insumos que involucran todo el desarrollo del protocolo, se encuentran completas en tanto a funcionalidades, soportes, documentación, seguridad, etc. 
 En cuanto a los conocimientos necesarios al protocolo, se cuentan con los suficientes que este protocolo necesita para su applicación. Dichos conocimientos se han adquirido a lo largo de la estadía en la ingeniería mediante las clases recibidas en las instalaciones de la  escuela o por la adquisición por medios externos. Ahora bien, un pequeño inconveniente para la aplicación del protocolo, es el desarrollo del software, ya que existen partes fundamentales del protocolo que requieren de nuevo conocimiento que aun no se adquiere y es necesario aprender, por tanto existe una pequeña posibilidad de que esto signifique un retraso en la producción del protocolo. 
 
 \begin{itemize}
 
-	\item \textbf{Lenguaje de programación:} para el desarrollo del sistema se estará trabajando con varios lenguajes de programación, la base de este desarrollo será Python, ya que es un lenguaje de fácil comprensión y con una lógica bastate familiar a lenguajes que anteriormente se habían trabajado, además de que Python nos permite trabajar primitivas criptográficas con una mayor facilidad. \\
+	\item \textbf{Lenguaje de programación:} para el desarrollo del sistema se estará trabajando con varios lenguajes de programación, la base de este desarrollo será Python, ya que es un lenguaje de fácil comprensión y con una lógica bastante familiar a lenguajes que anteriormente se habían trabajado, además de que Python nos permite trabajar primitivas criptográficas con una mayor facilidad. \\
 	\item \textbf{Sistema gestor de base de datos:} Se implementará MySQL como un manejador de base de datos, ya que es software libre y además se cuenta con una mayor experiencia de manejo y entendimiento. 
 \\
 De acuerdo con los requerimientos del sistema, los componentes necesarios para la implementación de este protocolo son: 
@@ -41,7 +41,7 @@ Se requiere de equipo de cómputo para poder llevar a cabo la codificación del 
 \endhead
 
 % aquí añadimos el fondo de todas las hojas, excepto de la última.
-\multicolumn{2}{|c|}{Continua en la siguiente página.}
+\multicolumn{2}{|c|}{Continúa en la siguiente página.}
 \endfoot
 
 % aquí añadimos el fondo de la última hoja.
@@ -133,7 +133,7 @@ EL análisis de riesgos consiste en identificar los riesgos que este sistema pue
 \endhead
 
 % aquí añadimos el fondo de todas las hojas, excepto de la última.
-\multicolumn{6}{|c|}{Continua en la siguiente página}
+\multicolumn{6}{|c|}{Continúa en la siguiente página}
 \endfoot
 
 % aquí añadimos el fondo de la última hoja.
@@ -166,18 +166,18 @@ EL análisis de riesgos consiste en identificar los riesgos que este sistema pue
 \endhead
 
 % aquí añadimos el fondo de todas las hojas, excepto de la última.
-\multicolumn{6}{|c|}{Continua en la siguiente página.}
+\multicolumn{6}{|c|}{Continúa en la siguiente página.}
 \endfoot
 
 % aquí añadimos el fondo de la última hoja.
 \endlastfoot
 
 % aquí añadimos el cuerpo de la tabla.
-R1 & Modificar requerimientos &  ALTA & MEDIA & ALTO & Nuevas características del protocolo \\ \hline
+R1 & Modificar requerimientos &  ALTA & MEDIA & ALTO & Se agregan nuevos o modificación de requerimientos actuales \\ \hline
 R2 & Cambios en tecnología & BAJA & MEDIA & BAJO & La tecnología usada es menos eficiente y causa conflictos \\ \hline
 R3 & Falta de usuarios y peticiones & ALTA & BAJA &  BAJO & No se localizaron todos los involucrados en el protocolo \\ \hline
 R4 & Equipo de cómputo & ALTA & BAJA & MUY BAJO & El equipo de cómputo empleado falla o no se encuentra funcionando \\ \hline
-R5 & Incumplimiento de acuerdos & ALTA & ALTA & MODERADO & Retrazo en actividades prgramadas \\ \hline
+R5 & Incumplimiento de acuerdos & ALTA & ALTA & MODERADO & Retraso en actividades programadas \\ \hline
 R6 & Problemas de planeación & MEDIA & ALTA & ALTO & Falta de comunicación por parte del equipo \\ \hline
 R7 & Falta de recursos & ALTA & MEDIA & MUY ALTO & No se cuenta con el poder adquisitivo de recursos e insumos \\ \hline
 R8 & Falta de conocimientos & MEDIA & MEDIA & MUY ALTO & El equipo no se encuentra capacitado para el desarrollo del sistema. \\ \hline
@@ -423,7 +423,7 @@ RF – SLL2 & El sistema permitirá la firma a ciegas (y) de cualquier archivo q
 \hline \hline
 RF – CL1 & El sistema permitirá al usuario gestionar archivos: Subir, Descargar, Eliminar \\ \hline
 RF – CL2 & El sistema permitirá al usuario subir un archivo (F) cifrado al servicio de almacenamiento   \\ \hline
-RF – CL3 & El sistema permitirá al usuario descargar un archivo (F) descifrado elejido de su lista de archivos en el servicio de almacenamiento. \\ \hline
+RF – CL3 & El sistema permitirá al usuario descargar un archivo (F) descifrado elegido de su lista de archivos en el servicio de almacenamiento. \\ \hline
 RF – CL4 &El sistema permitirá al usuario eliminar un archivo (F) cuando el usuario elige alguno de su lista de archivos cargados en el servicio de almacenamiento.   \\ \hline
 \end{tabular}
 \caption{Requerimientos funcionales del cliente}
@@ -464,7 +464,7 @@ RF – N1 & El sistema permitirá al servicio de almacenamiento llevar a cabo un
 \endhead
 
 % aquí añadimos el fondo de todas las hojas, excepto de la última.
-\multicolumn{3}{|c|}{Continua en la siguiente página}
+\multicolumn{3}{|c|}{Continúa en la siguiente página}
 \endfoot
 
 % aquí añadimos el fondo de la última hoja.
@@ -481,7 +481,7 @@ RNF1 & Eficiencia &  \begin{itemize}
 RNF2 & Fiabilidad &  \begin{itemize} 
   \item La pérdida de consultas en el servidor de llaves es menor a 3 veces el máximo de consultas realizadas. 
    \item Los archivos almacenados en el servidor de almacenamiento deben ser recuperados por el usuario al instante en que este lo solicite. 
-   \item El tiempo de latencia que existe entre el servidor de llaves y el cleinte será de máximo 118ms. 
+   \item El tiempo de latencia que existe entre el servidor de llaves y el cliente será de máximo 118ms. 
  \end{itemize}
 \\ \hline
 
@@ -489,9 +489,9 @@ RNF3 & Seguridad & \begin{itemize}
     \item El sistema almacenará los datos de los usuarios y sus contraseñas en una base de datos MySQL, dichos datos serán modificados mínimo 2  veces al año.  
    \item Se autenticarán los clientes antes de comenzar el proceso de generación de llaves de archivo. 
    \item El servidor de llaves firmará claves para un sólo mensaje a la vez sin saber el contenido de éste. 
-   \item El inicio de sesión de usuarios estará protegido en un canal seguro utilizando almoritmos criptográficos. 
+   \item El inicio de sesión de usuarios estará protegido en un canal seguro utilizando algoritmos criptográficos. 
    \item Las funciones hash de archivos a almacenar utilizarán la función criptográfica SHA-(256)
-   \item Los formularios para ingresar datos al sistema estarán validados por tipo de dato, longitud e internamente se utilizará un ORM (Object Relational Maping) paraevitar inyecciones SQL. 
+   \item Los formularios para ingresar datos al sistema estarán validados por tipo de dato, longitud e internamente se utilizará un ORM (Object Relational Maping) para evitar inyecciones SQL. 
  \end{itemize}
 
 \\ \hline 
@@ -510,8 +510,6 @@ RNF5 & Usabilidad & \begin{itemize}
 \\ \hline
 RNF6 & Extensibilidad & \begin{itemize}
    \item El sistema podrá tener un crecimiento a futuro ya que este será programado por módulos lo cuál hará más fácil su crecimiento.
-   \item El sistema debe proporcionar mensajes de error que sean informativos y orientados al usuario final. 
-   \item El sistema debe poseer interfaces gráficas bien formadas.
  \end{itemize}
 \\ \hline
 \caption{Requerimientos no funcionales del sistema}
