--- a/TT-2016-B045/casosUso/Cliente/CUCL4.tex
+++ b/TT-2016-B045/casosUso/Cliente/CUCL4.tex
@@ -38,8 +38,7 @@
 	\UCpaso Muestra el mensaje \MSGref{MSG1}{Operación exitosa}.\end{UCtrayectoria}
 
 % ---------------- Trayectorias alternativas -------------- Colocar los mensajes {\bf MSG1-}
-\begin{UCtrayectoriaA}{A}
-	{Archivo inexistente}
+\begin{UCtrayectoriaA}{A}{Archivo inexistente}
 	\UCpaso [\UCactor] El cliente da clic en el botón \IUbuttonAceptar.
 	\UCpaso El sistema despliega la pantalla principal.
 \end{UCtrayectoriaA}
