--- a/TT-2016-B045/casosUso/Cliente/CUCL2.tex
+++ b/TT-2016-B045/casosUso/Cliente/CUCL2.tex
@@ -69,6 +69,6 @@
 \begin{UCtrayectoriaA}{C}{Número aleatorio incorrecto}
 	\UCpaso Elegir un número aleatorio no primo o mayor al tamaño de las llaves del servidor de llaves.
 	\UCpaso Muestra el Mensaje \MSGref{MSG-CL3}{Número incorrecto}.
-	\UCpaso Continua en el paso \ref{CUCL2Regreso} del \UCref{CUCL2}.
+	\UCpaso Continúa en el paso \ref{CUCL2Regreso} del \UCref{CUCL2}.
 \end{UCtrayectoriaA}
 
