--- a/TT-2016-B045/archivosTex/diseño.tex
+++ b/TT-2016-B045/archivosTex/diseño.tex
@@ -37,7 +37,7 @@ El capítulo de diseño, esta conformado por la especificación de como está co
 \begin{enumerate}
 \item \textbf{Hardware}
 \begin{itemize}
-\item Procesador: Intel Celeron N2840 o superior
+\item Procesador: Intel Core i3 o superior.
 \item RAM: 2 GB o superior
 \end{itemize}
 \item \textbf{Software}
@@ -52,17 +52,12 @@ El capítulo de diseño, esta conformado por la especificación de como está co
 \item MySQL Workbench.
 \item ownCloud.
 \end{itemize}
-
 \item \textbf{Red}
 \begin{itemize}
 \item Conexión a internet de 2 Mb/s
 \end{itemize}
-
 \end{enumerate}
 
-
-
-\newpage
 %=======================================================================================================================================
 \section{Casos de Uso}
 
