--- a/TT-2016-B045/casosUso/Cliente/CUCL1.tex
+++ b/TT-2016-B045/casosUso/Cliente/CUCL1.tex
@@ -3,7 +3,7 @@
 
 
 
-\begin{UseCase}{CUCL1}{Subir archivo}{El usuario seleccionara el archivo que desea que sea almacenado en la nube, este archivo será cifrado y enviado de manera transparente para el usuario, y dependiendo si el archivo se detecta duplicado se enviaran distintos archivos.}
+\begin{UseCase}{CUCL1}{Subir archivo}{El usuario seleccionará el archivo que desea que sea almacenado en la nube, este archivo será cifrado y enviado de manera transparente para el usuario, y dependiendo si el archivo se detecta duplicado se enviarán distintos archivos.}
 
 	\UCitem{Versión}{1.0 - 19/04/17}
 	\UCitem{Autor}{Jhonatan Saulés Cortés}
@@ -43,7 +43,7 @@
 
 % ------------ Trayectoria principal, poner referencias a pantallas del sistema, reglas entre otras cosas que sean necesarias. ------------
 \begin{UCtrayectoria}{Principal}
-	\UCpaso[\UCactor] Da un clic en la opción "Subir Archivo" en la pantalla .
+	\UCpaso[\UCactor] Da un clic en la opción $Subir Archivo$ en la pantalla .
 	\UCpaso Despliega una ventana con la carpeta personal que muestra los archivos del usuario. \Trayref{A}
 	\UCpaso[\UCactor] Selecciona el archivo \textit{(M)} que va a subir y da un clic en el botón \IUbuttonAceptar en la pantalla . \Trayref{B}
 	\UCpaso Elige un número aleatorio \textit{r} dentro del campo de números primos de igual o menor tañano a las llaves del servidor de llaves. \Trayref{C} \label{CUCL2Regreso}
