--- a/TT-2016-B045/casosUso/Cliente/CUCL6.tex
+++ b/TT-2016-B045/casosUso/Cliente/CUCL6.tex
@@ -50,28 +50,28 @@
 \begin{UCtrayectoriaA}{A}{Datos incorrectos}
 	\UCpaso Muestra el mensaje \MSGref{MSG5}{Dato incorrecto}. 
 	\UCpaso[\UCactor] Da clic en el botón \textit{Cerrar}.
-	\UCpaso[\UCactor] Continúa en el paso \ref{CUCL6Regresa} del \UCref{CUCL6}
+	\UCpaso[\UCactor] Continua en el paso \ref{CUCL6Regresa} del \UCref{CUCL6}
 
 \end{UCtrayectoriaA} 
 
 \begin{UCtrayectoriaA}{B}{Longitud inválida}
 	\UCpaso Muestra el mensaje \MSGref{MSG6}{Longitud inválida}. 
 	\UCpaso[\UCactor] Da clic en el botón \textit{Cerrar}.
-	\UCpaso[\UCactor] Continúa en el paso \ref{CUCL6Regresa} del \UCref{CUCL6}
+	\UCpaso[\UCactor] Continua en el paso \ref{CUCL6Regresa} del \UCref{CUCL6}
 
 \end{UCtrayectoriaA}
 
 \begin{UCtrayectoriaA}{C}{Datos requeridos}
 	\UCpaso Muestra el mensaje \MSGref{MSG9}{Dato requerido}. 
 	\UCpaso[\UCactor] Da clic en el botón \textit{Cerrar}.
-	\UCpaso[\UCactor] Continúa en el paso \ref{CUCL6Regresa} del \UCref{CUCL6}
+	\UCpaso[\UCactor] Continua en el paso \ref{CUCL6Regresa} del \UCref{CUCL6}
 
 \end{UCtrayectoriaA}
 
 \begin{UCtrayectoriaA}{D}{No existe información}
 	\UCpaso Muestra el mensaje \MSGref{MSG10}{No existe información}. 
 	\UCpaso[\UCactor] Da clic en el botón \textit{Cerrar}.
-	\UCpaso[\UCactor] Continúa en el paso \ref{CUCL6Regresa} del \UCref{CUCL6}
+	\UCpaso[\UCactor] Continua en el paso \ref{CUCL6Regresa} del \UCref{CUCL6}
 
 \end{UCtrayectoriaA}
 
@@ -79,7 +79,7 @@
 \begin{UCtrayectoriaA}{E}{Contraseña incorrecta}
 	\UCpaso Muestra el mensaje \MSGref{MSG11}{Contraseña incorrecta} 
 	\UCpaso[\UCactor] Da clic en el botón \textit{Cerrar}.
-	\UCpaso[\UCactor] Continúa en el paso \ref{CUCL6Regresa} del \UCref{CUCL6}
+	\UCpaso[\UCactor] Continua en el paso \ref{CUCL6Regresa} del \UCref{CUCL6}
 
 \end{UCtrayectoriaA} 
 
