--- a/TT-2016-B045/casosUso/Servidor/CUSLL2.tex
+++ b/TT-2016-B045/casosUso/Servidor/CUSLL2.tex
@@ -3,7 +3,7 @@
 
 
 
-\begin{UseCase}{CUSLL2}{Generar firma ciega (y). }{El servidor realizará una firma a ciegas de un archivo solicitado, este archivo ha sido oculto para que el servidor no sepa de donde proviene o que contiene, esta firma servirá para la generación de una llave para cifrar el archivo solicitado.}
+\begin{UseCase}{CUSLL2}{Generar firma ciega (y). }{El servidor realizara una firma a ciegas de un archivo solicitado, este archivo ha sido ocultado para que el servidor no sepa de donde proviene o que contiene, esta firma ayudara para la generación de una llave para cifrar el archivo solicitado.}
 
 	\UCitem{Versión}{1.0 - 16/04/17}
 	\UCitem{Autor}{Diana Leslie González Olivier}
@@ -11,8 +11,8 @@
 	\UCitem{Módulo}{Servidor de Llaves}
 	\UCitem{Actor}{Servidor}
 	\UCitem{Propósito}{Que el servidor firme el archivo solicitado sin saber a que cliente corresponde.}
-	\UCitem{Entradas}{Archivo oculto $x$}
-	\UCitem{Salidas}{Firma a ciegas $y$}
+	\UCitem{Entradas}{Archivo oculto (x)}
+	\UCitem{Salidas}{Firma a ciegas (y)}
 	\UCitem{Precondiciones}{}
 	\UCitem{Postcondiciones}{}
 	\UCitem{Reglas del negocio}{
@@ -30,10 +30,10 @@
 
 % ------------ Trayectoria principal, poner referencias a pantallas del sistema, reglas entre otras cosas que sean necesarias. ------------
 \begin{UCtrayectoria}{Principal}
-	\UCpaso Recibe el archivo oculto $x$ .
-	\UCpaso Firma el archivo generando un nuevo archivo $y$.
-	\UCpaso Guarda en la base de datos el archivo $y$.
-	\UCpaso Envía al cliente el archivo $y$.
+	\UCpaso Recibe el archivo oculto (x) .
+	\UCpaso Firma el archivo generando un nuevo archivo (y).
+	\UCpaso Guarda en la base de datos el archivo (y).
+	\UCpaso Envía al cliente el archivo (y).
 \end{UCtrayectoria}
 
 % ---------------- Trayectorias alternativas -------------- Colocar los mensajes  {\bf MSG1-}
