--- a/TT-2016-B045/casosUso/Cliente/CUCL3.tex
+++ b/TT-2016-B045/casosUso/Cliente/CUCL3.tex
@@ -1,7 +1,7 @@
 % Copie este bloque por cada caso de uso:
 %-------------------- COMIENZA descripción del caso de uso.
 
-\begin{UseCase}{CUCL3}{Descargar archivos descifrados.}{El cliente podrá descargar su archivo y descifrarlo.}
+\begin{UseCase}{CUCL3}{Descargar archivos.}{El cliente podrá descargar su archivo y descifrarlo.}
 
 \UCitem{Versión}{1.0 - 16/04/17}	
 \UCitem{Autor}{Diana Leslie González Olivier}
