--- a/TT-2016-B045/casosUso/Nube/CUNIndex.tex
+++ b/TT-2016-B045/casosUso/Nube/CUNIndex.tex
@@ -1,3 +1,3 @@
-\cfinput{casosUso/Nube/CUN1}
-\cfinput{casosUso/Nube/CUN2}
-\cfinput{casosUso/Nube/CUN3}
+%\cfinput{casosUso/Nube/CUN1}
+%\cfinput{casosUso/Nube/CUN2}
+%\cfinput{casosUso/Nube/CUN3}
