--- a/TT-2016-B045/bibliografia.bib
+++ b/TT-2016-B045/bibliografia.bib
@@ -192,6 +192,17 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
    note = {\url{http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/index.php/1-panorama-general/13-servicios-y-mecanismos-de-seguridad/131-servicios-de-seguridad}}
  }
 
+@book{sommerville,
+  author    = {Ian Sommerville},
+  title     = {Software Engineering, 6. Auflage},
+  publisher = {Pearson Studium},
+  year      = {2001},
+  isbn      = {978-3-8273-7001-3},
+  timestamp = {Wed, 26 Apr 2017 17:48:08 +0200},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/books/daglib/0004618},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
 @misc{norepudio,
    author = {López López Erika},
    title = "Fundamentos de Seguridad Informática.",
