--- a/TT-2016-B045/archivosTex/protocoloDupless.tex
+++ b/TT-2016-B045/archivosTex/protocoloDupless.tex
@@ -8,6 +8,10 @@ En este capítulo se pretende establecer mediante un análisis, la comparativa r
 
 
 \section{Estado del Arte. }
+
+El cifrado convergente consiste en una solución que ocupan los sistemas que se muestran abajo, esta solución pretende dar seguridad y evitar duplicados, esta consiste en que si un usuario quiere subir un archivo para generar su llave debe calcular el hash de dicho archivo, el resultado será su llave para poder cifrarlo, así de esta manera si otro usuario quiere subir el mismo archivo obtendrá la misma llave y así el resultado de los archivos cifrados será el mismo y se podrá evitar así el duplicado en la nube. Pero tiene un problema importante en la parte de la seguridad, ya que no es resistente a ataques por fuerza bruta, esto quiere decir que si un usuario quiere robar un archivo, para poder descifrarlo necesita el hash del mensaje que se cifro, pero este lo puede obtener realizando varias pruebas con archivos diferentes hasta encontrar un archivo que dé el mismo hash y entonces poder descifrar el archivo correctamente.
+\\
+
 \begin{tabular}{ |p{8cm}|p{8cm}| }
 \hline
 { \textbf{TahoeFS}}  & {\textbf{ABS: The Apportioned Backup System} } \\
